<resources>
    <string name="app_name">BEMO</string>
    <string name="middle_dot">·</string>

    // home_fragment
    <string name="home_title">배모</string>
    <string name="lesson_title">배울 수 있어요!</string>
    <string name="place_title">장소를 제공해요!</string>

    // result_fragment
    <string name="result_title">검색 결과</string>
    <string name="result_premium">프리미엄</string>
    <string name="result_ad">광고</string>
    
    
    // activity_company
    <dimen name="bottom_button_height">56dp</dimen>

    // list_company
    <string name="list_company_gb">국비지원</string>
    <dimen name="list_company_star_size">16dp</dimen>
    
    // list_company_info
    <string name="company_address">주소</string>
    <string name="company_target">대상</string>
    <string name="company_distance">거리</string>


    // list_company_category
    <string name="company_category">카테고리</string>

    // list_company_location
    <string name="company_location">위치</string>
    <dimen name="location_height">140dp</dimen>

    // list_company_teacher
    <dimen name="company_teacher_height">150dp</dimen>
    <dimen name="company_teacher_width">120dp</dimen>
    <string name="teacher_name">성함</string>
    <string name="teacher_rank">직급</string>
    <string name="teacher_career">커리어</string>


    // my_fragment
    <string name="my_title">마이페이지</string>
    <string name="my_point">포인트</string>
    <string name="my_shop">상점 가기</string>

    <dimen name="company_img_size">64dp</dimen>

    <dimen name="font_size_tab">10sp</dimen>
    <dimen name="font_size_8">8sp</dimen>
    <dimen name="font_size_10">10sp</dimen>
    <dimen name="font_size_12">12sp</dimen>
    <dimen name="font_size_13">13sp</dimen>
    <dimen name="font_size_14">14sp</dimen>
    <dimen name="font_size_15">15sp</dimen>
    <dimen name="font_size_16">16sp</dimen>
    <dimen name="font_size_17">17sp</dimen>
    <dimen name="font_size_20">20sp</dimen>

    <dimen name="padding_2">2dp</dimen>
    <dimen name="padding_4">4dp</dimen>
    <dimen name="padding_6">6dp</dimen>
    <dimen name="padding_7">7dp</dimen>
    <dimen name="padding_8">8dp</dimen>
    <dimen name="padding_10">10dp</dimen>
    <dimen name="padding_12">12dp</dimen>
    <dimen name="padding_14">14dp</dimen>
    <dimen name="padding_15">15dp</dimen>
    <dimen name="padding_16">16dp</dimen>
    <dimen name="padding_30">30dp</dimen>

    <dimen name="margin_4">4dp</dimen>
    <dimen name="margin_6">6dp</dimen>
    <dimen name="margin_8">8dp</dimen>
    <dimen name="margin_10">10dp</dimen>
    <dimen name="margin_12">12dp</dimen>
    <dimen name="margin_14">14dp</dimen>
    <dimen name="margin_16">16dp</dimen>
    <dimen name="margin_20">20dp</dimen>
    <dimen name="margin_24">24dp</dimen>
    <dimen name="margin_32">32dp</dimen>
    <dimen name="margin_36">36dp</dimen>


    <dimen name="corner_4">4dp</dimen>
    <dimen name="corner_6">6dp</dimen>
    <dimen name="corner_8">8dp</dimen>
    <dimen name="corner_10">10dp</dimen>
    <dimen name="corner_12">12dp</dimen>

    <dimen name="elevation_0">0dp</dimen>


    // snack_bar text
    <string name="text_ad">광고상품 영역으로 브랜드명은 음식점 상호와 다를 수 있습니다.</string>

</resources>