<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/text_title"
            android:text="@string/home_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imbSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_36"
            android:background="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/semi_bold"
        android:text="@string/lesson_title"
        android:textColor="@color/black2"
        android:textSize="@dimen/font_size_17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewLesson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        app:layout_constraintLeft_toLeftOf="@id/txtLesson"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLesson" />

    <TextView
        android:id="@+id/txtPlace"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/viewLesson"
        app:layout_constraintTop_toBottomOf="@id/viewLesson"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/semi_bold"
        android:text="@string/place_title"
        android:textColor="@color/black2"
        android:textSize="@dimen/font_size_17"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        app:layout_constraintLeft_toLeftOf="@id/txtPlace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPlace" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/viewPlace"
        app:layout_constraintRight_toRightOf="@id/viewPlace"
        app:layout_constraintTop_toBottomOf="@id/viewPlace">

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>