<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imgCompany"
        android:layout_width="@dimen/company_img_size"
        android:layout_height="@dimen/company_img_size"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/company_address"
        android:textColor="@color/blue_gray6"
        android:textSize="@dimen/font_size_13"
        app:layout_constraintBottom_toTopOf="@id/txtInfo2"
        app:layout_constraintLeft_toRightOf="@id/imgCompany"
        app:layout_constraintTop_toTopOf="@id/imgCompany" />


    <TextView
        android:id="@+id/txtInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_target"
        android:textColor="@color/blue_gray6"
        android:textSize="@dimen/font_size_13"
        app:layout_constraintBottom_toTopOf="@id/txtInfo3"
        app:layout_constraintLeft_toLeftOf="@id/txtInfo1"
        app:layout_constraintTop_toBottomOf="@id/txtInfo1" />


    <TextView
        android:id="@+id/txtInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_distance"
        android:textColor="@color/blue_gray6"
        android:textSize="@dimen/font_size_13"
        app:layout_constraintBottom_toBottomOf="@id/imgCompany"
        app:layout_constraintLeft_toLeftOf="@id/txtInfo1"
        app:layout_constraintTop_toBottomOf="@id/txtInfo2" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="@id/txtInfo1"
        app:layout_constraintLeft_toRightOf="@id/txtInfo1"
        app:layout_constraintTop_toTopOf="@id/txtInfo1" />

    <TextView
        android:id="@+id/txtTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/txtInfo2"
        app:layout_constraintLeft_toLeftOf="@id/txtAddress"
        app:layout_constraintTop_toTopOf="@id/txtInfo2" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/txtInfo3"
        app:layout_constraintLeft_toLeftOf="@id/txtAddress"
        app:layout_constraintTop_toTopOf="@id/txtInfo3" />

    <TextView
        android:id="@+id/txtUtil1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/imgCompany"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:background="@drawable/shape_round_yellow"
        android:textSize="@dimen/font_size_14"
        android:paddingStart="@dimen/padding_12"
        android:paddingEnd="@dimen/padding_12"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/imgCompany" />

    <TextView
        android:id="@+id/txtUtil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="@id/txtUtil1"
        app:layout_constraintBottom_toBottomOf="@id/txtUtil1"
        app:layout_constraintLeft_toRightOf="@id/txtUtil1"
        android:background="@drawable/shape_round_green"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/green"
        android:paddingStart="@dimen/padding_12"
        android:paddingEnd="@dimen/padding_12" />

    <TextView
        android:id="@+id/txtUtil3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="@id/txtUtil1"
        app:layout_constraintBottom_toBottomOf="@id/txtUtil1"
        app:layout_constraintLeft_toRightOf="@id/txtUtil2"
        android:background="@drawable/shape_round_blue"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_size_14"
        android:paddingStart="@dimen/padding_12"
        android:paddingEnd="@dimen/padding_12" />

</androidx.constraintlayout.widget.ConstraintLayout>