<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewMy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:paddingBottom="@dimen/padding_30"
        android:background="@color/blue_gray8"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/text_title"
                android:text="@string/my_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imbAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_36"
                android:background="@drawable/ic_alert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/txtTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imbSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_36"
                android:background="@drawable/ic_setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/viewImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_20"
            android:elevation="@dimen/elevation_0"
            app:cardCornerRadius="45dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTop">

            <ImageView
                android:id="@+id/imgMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_default_my" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtMy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_14"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintBottom_toBottomOf="@id/viewImg"
            app:layout_constraintLeft_toRightOf="@id/viewImg"
            app:layout_constraintTop_toTopOf="@id/viewImg" />

        <androidx.cardview.widget.CardView
            android:id="@+id/viewPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:elevation="@dimen/elevation_0"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_12"
            app:layout_constraintLeft_toLeftOf="@id/viewImg"
            app:layout_constraintTop_toBottomOf="@id/viewImg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_16"
                android:paddingTop="@dimen/padding_10"
                android:paddingRight="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_10">

                <TextView
                    android:id="@+id/point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_point"
                    android:textColor="@color/blue_gray6"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txtPoint"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:fontFamily="@font/semi_bold"
                    android:text="50,400P"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/point"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/viewShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_14"
            android:elevation="@dimen/elevation_0"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="@dimen/corner_12"
            app:layout_constraintBottom_toBottomOf="@id/viewPoint"
            app:layout_constraintLeft_toRightOf="@id/viewPoint"
            app:layout_constraintTop_toTopOf="@id/viewPoint">

            <TextView
                android:id="@+id/txtShop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_16"
                android:paddingTop="@dimen/padding_10"
                android:paddingRight="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_10"
                android:text="@string/my_shop"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_16" />


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabMy"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMy"
        app:tabIndicatorColor="@color/blue"
        app:tabIndicatorHeight="4dp"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        android:background="@color/white"
        app:tabRippleColor="@android:color/transparent"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/gray" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerMy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tabMy"
        app:layout_constraintRight_toRightOf="@id/tabMy"
        app:layout_constraintTop_toBottomOf="@id/tabMy" />

</androidx.constraintlayout.widget.ConstraintLayout>